feat: Add maintenance action to update all asset metadata incl. mimetypes (dev-3140) (#155)
